v0.0.1/modules/schema/pages/class/EndDeviceCapability.adoc
= `EndDeviceCapability`
:toclevels: 4


+++Inherent capabilities of an end device (i.e., the functions it supports).+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:EndDeviceCapability`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* *`EndDeviceCapability`*


== Slots




[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<autonomousDst,`autonomousDst`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++True if autonomous DST (daylight saving time) function is supported.+++

| <<communication,`communication`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++True if communication function is supported.+++

| <<connectDisconnect,`connectDisconnect`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++True if connect and disconnect function is supported.+++

| <<demandResponse,`demandResponse`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++True if demand response function is supported.+++

| <<electricMetering,`electricMetering`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++True if electric metering function is supported.+++

| <<gasMetering,`gasMetering`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++True if gas metering function is supported.+++

| <<metrology,`metrology`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++True if metrology function is supported.+++

| <<onRequestRead,`onRequestRead`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++True if on request read function is supported.+++

| <<outageHistory,`outageHistory`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++True if outage history function is supported.+++

| <<pressureCompensation,`pressureCompensation`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++True if device performs pressure compensation for metered quantities.+++

| <<pricingInfo,`pricingInfo`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++True if pricing information is supported.+++

| <<pulseOutput,`pulseOutput`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++True if device produces pulse outputs.+++

| <<relaysProgramming,`relaysProgramming`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++True if relays programming function is supported.+++

| <<reverseFlow,`reverseFlow`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++True if reverse flow function is supported.+++

| <<superCompressibilityCompensation,`superCompressibilityCompensation`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++True if device performs super compressibility compensation for metered quantities.+++

| <<temperatureCompensation,`temperatureCompensation`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++True if device performs temperature compensation for metered quantities.+++

| <<textMessage,`textMessage`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++True if the displaying of text messages is supported.+++

| <<waterMetering,`waterMetering`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++True if water metering function is supported.+++
|===

'''


//[discrete]
[#autonomousDst]
=== `autonomousDst`
+++True if autonomous DST (daylight saving time) function is supported.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceCapability.autonomousDst`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#communication]
=== `communication`
+++True if communication function is supported.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceCapability.communication`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#connectDisconnect]
=== `connectDisconnect`
+++True if connect and disconnect function is supported.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceCapability.connectDisconnect`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#demandResponse]
=== `demandResponse`
+++True if demand response function is supported.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceCapability.demandResponse`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#electricMetering]
=== `electricMetering`
+++True if electric metering function is supported.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceCapability.electricMetering`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#gasMetering]
=== `gasMetering`
+++True if gas metering function is supported.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceCapability.gasMetering`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#metrology]
=== `metrology`
+++True if metrology function is supported.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceCapability.metrology`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#onRequestRead]
=== `onRequestRead`
+++True if on request read function is supported.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceCapability.onRequestRead`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#outageHistory]
=== `outageHistory`
+++True if outage history function is supported.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceCapability.outageHistory`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#pressureCompensation]
=== `pressureCompensation`
+++True if device performs pressure compensation for metered quantities.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceCapability.pressureCompensation`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#pricingInfo]
=== `pricingInfo`
+++True if pricing information is supported.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceCapability.pricingInfo`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#pulseOutput]
=== `pulseOutput`
+++True if device produces pulse outputs.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceCapability.pulseOutput`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#relaysProgramming]
=== `relaysProgramming`
+++True if relays programming function is supported.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceCapability.relaysProgramming`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#reverseFlow]
=== `reverseFlow`
+++True if reverse flow function is supported.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceCapability.reverseFlow`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#superCompressibilityCompensation]
=== `superCompressibilityCompensation`
+++True if device performs super compressibility compensation for metered quantities.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceCapability.superCompressibilityCompensation`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#temperatureCompensation]
=== `temperatureCompensation`
+++True if device performs temperature compensation for metered quantities.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceCapability.temperatureCompensation`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#textMessage]
=== `textMessage`
+++True if the displaying of text messages is supported.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceCapability.textMessage`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#waterMetering]
=== `waterMetering`
+++True if water metering function is supported.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceCapability.waterMetering`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===


